add redis, and update version

--- a/KodBox/synology_added/etc/php/fpm.d/kodbox-fpm.conf
+++ b/KodBox/synology_added/etc/php/fpm.d/kodbox-fpm.conf
@@ -2,3 +2,5 @@ pm.max_children = 50
 pm.start_servers = 10
 pm.min_spare_servers = 10
 pm.max_spare_servers = 20
+pm.max_requests = 500
+request_terminate_timeout = 3600
